infra/k8s/ingress-depl/1-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: nginx
  template:
    metadata: 
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.25.2
          ports:
            - name: http
              containerPort: 80
