infra/k8s/ingress-depl/3-ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: nginx
spec:
  rules:
  - host: www.posts.com
    http:
      paths:
      - path: /posts
        pathType: Prefix
        backend:
          service:
            name: posts-clusterip-srv
            port:
              number: 4000
      - path: /comments/posts
        pathType: Prefix
        backend:
          service:
            name: comments-srv
            port:
              number: 4001

# ingress-nginx-controller-7dcdbcff84-gmfbr
